[tool.poetry]
name = "ape-ethereum-bug"
version = "0.1.0"
description = "Transaction decoding bug"
authors = ["nazariyv <hi@naz.ooo>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ape_ethereum_bug"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-ape = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
